Fix alignment issue of logo in head-img.

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ p.foot
     grid-column:2/span 1;
     display:flex;
     flex-flow:row wrap;
-    align-items: center;
+    align-items: stretch;
+    justify-content:center;
     background-color:#2a6099;
 }
 .head-img > img
